feat: added Form refresh

--- a/src/views/new-idea.html
+++ b/src/views/new-idea.html
@@ -23,7 +23,6 @@
                     <el-input
                         class="input-new-tag"
                         v-if="inputVisible"
-                        v-model="inputValue"
                         ref="saveTagInput"
                         size="mini"
                         @keyup.enter.native="handleInputConfirm"
@@ -33,7 +32,7 @@
                     <el-button v-else class="button-new-tag" size="small" @click="showInput">+ New Tag</el-button>
                 </el-form-item>
                 <el-button type ="danger" plain @click="postIdea(idea)">Create Idea</el-button> 
-                <el-button type ="info" plain @click="navigate('new-idea')"> Abort </el-button>          
+                <el-button type ="info" plain @click="resetform()"> Abort </el-button>          
             </el-form>
         </div>    
     </el-main>
