--- a/src/views/home.html
+++ b/src/views/home.html
@@ -4,14 +4,7 @@
     </el-header>
     <el-main>
     
-    <p>
-            <markdown :value="markdown"></markdown>
-        </p>
-        <div v-if="idea">
-            <h2>{{ idea.name }}</h2>
-            <markdown :value="idea.description"></markdown>
-        </div>
-
+    <p> <markdown :value="markdown"></markdown></p>
          <div>
             <el-button type ="warning" plain @click="navigate('ideas')">Get Idea </el-button>
             <el-button type ="danger" plain @click="navigate('new-idea')"> Create Idea!  </el-button>
