--- a/src/views/home.html
+++ b/src/views/home.html
@@ -7,4 +7,8 @@
 
         <idea v-if="user && idea" :idea="idea"></idea>
     </div>
+
+    <div class="bottom">
+        <idea-controls v-if="user" :idea="idea" @completed="markCompleted()" :allow-next="true" @next="next()"></idea-controls>
+    </div>
 </div>
