--- a/src/views/home.html
+++ b/src/views/home.html
@@ -9,8 +9,10 @@
     </div>
 
     <div class="bottom">
-        <idea-controls v-if="user" :idea="idea" @completed="markCompleted()"
-                        :allow-next="true" @next="next()"
-                        :allow-delete="true" @delete="remove()"></idea-controls>
+        <idea-controls v-if="user" :idea="idea"
+            :allow-complete="true" @complete="markCompleted(true)"
+            :allow-incomplete="true" @incomplete="markCompleted(false)"
+            :allow-next="true" @next="next()"
+            :allow-delete="true" @delete="remove()"></idea-controls>
     </div>
 </div>
