--- a/src/views/idea.html
+++ b/src/views/idea.html
@@ -9,6 +9,10 @@
     </div>
 
     <div class="bottom">
-        <idea-controls v-if="user" :idea="idea" @completed="markCompleted()" :allow-next="false"></idea-controls>
+        <idea-controls v-if="user" :idea="idea"
+            :allow-complete="true" @complete="markCompleted(true)"
+            :allow-incomplete="true" @incomplete="markCompleted(false)"
+            :allow-remove="true" @incomplete="remove()"
+            :allow-next="false"></idea-controls>
     </div>
 </div>
