--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,15 @@ pre > code {
     background: #eee;
 }
 
+.header-menu div {
+    text-decoration: none;
+    color: #444;
+    background: #fff;
+    line-height: var(--header-height);
+    padding: 0 20px;
+    vertical-align: middle;
+}
+
 .header__name {
     font-weight: 100;
     text-decoration: none;
