fix: Correctly select a collection for the new collection page

--- a/src/views/new.html
+++ b/src/views/new.html
@@ -1,5 +1,7 @@
 <div class="fill">
     <div class="center">
+        <h2>Add a new idea to {{collection && collection.name}}</h2>
+
         <el-form style="min-width: 480px;">
             <el-form-item label="Name">
                 <el-input v-model="newIdea.name" placeholder="Give your idea a name"></el-input>
